# fie2025data

./: README.md  analysis.ipynb  fie_2025_papers.csv  parse.ipynb  pyproject.toml
